# UnixBattleshipCPP

./: README.md
BattleshipWithAI/: AiCheat.cpp  AiCheat.h  AiHuntDestroy.cpp  AiHuntDestroy.h  AiRandom.cpp  AiRandom.h  CMakeLists.txt  InputChecks.cpp  InputChecks.h  board.cpp  board.h  fileReading.cpp  fileReading.h  main.cpp  players.cpp  players.h  playersAI.cpp  playersAI.h  playersHuman.cpp  playersHuman.h  setup.cpp  setup.h  ships.cpp  ships.h  turns.cpp  turns.h
